# alfabeticament

./: .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json  readme.md
backend/: README.md  package-lock.json  package.json  pyproject.toml
backend/api/: cli.py  main.py  models.py  schemas.py
backend/api/routers/: __init__.py  abc.py  auth.py  courses.py  workouts.py
backend/api/seed/: __init__.py  dev.py  seed.dev.py
backend/api/seed/code/: abc.json  abc_bar.json  courses.json
backend/api/workouts/: auths.py
backend/prisma/: schema.prisma  seed.ts
backend/prisma/codes/: abecedaris.ts  users.ts
backend/src/: app.module.ts  main.ts
backend/src/abc/: abc.controller.ts  abc.module.ts  abc.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
backend/src/auth/guards/: jwt.guard.ts
backend/src/prisma/: prisma.service.ts
backend/src/user/: user.service.ts
backend/src/user/dto/: user.dto.ts
docs/: backend.frontend.md  docs.md
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/: ProviderCourses.tsx
prisma/: schema.prisma
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(abc)/: layout.tsx
src/app/(login)/: page.tsx
src/app/(mark)/: layout.tsx
src/components/: Sidebar.tsx  login-user.tsx  mobile-header.tsx  mobile-sidebar.tsx  sidebar.tsx
src/components/lessons/: footer.tsx  header.tsx
src/components/sounds/: sound.tsx
src/db/: queries.ts  schema.ts  seed.tsx
src/lib/: prisma.ts
src/libs/: prisma.ts
(+68 files in other folders)
