[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==3.2.0",
    "fastapi[standard]>=0.116.1",
    "jose>=1.0.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.42",
]


[tool.fastapi-cli.commands]
seed = "api.cli:app"